# wdl-cwl-translator

./: .coverage  .coveragerc  .gitignore  Code_to_run.py  MANIFEST.in  Makefile  Qc.yml  README.md  TaskVisitor.py  WdlV1_1Ast.py  WdlV1_1Lexer.g4  WdlV1_1Lexer.py  WdlV1_1Parser.py  WdlV1_1ParserListener.py  WdlV1_1ParserVisitor.py  codecov.yml  coverage.xml  create_cwl_from_objects.py  cwlexpr_object_test.cwl  lint-requirements.txt  map.js  mypy.ini  mypy_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_WdlV1_1.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-tests.yml  codeql-analysis.yml
Task2&3/: EvaluateTaskVisitor.py  WdlV1_1Ast.py  WdlV1_1Lexer.java  test_WdlV1_1.py
Task4/: create_cwl_from_objects.py  result.cwl  setup.py
Task4/UNKNOWN.egg-info/: SOURCES.txt  requires.txt
Week1/: Qc.cwl  Qc.wdl  Qc.yml  _LAST  create_cwl.py  cwl_error.txt  metrics_file  metrics_file_cwl_output  result.cwl  simple1.bam  wdl_error.txt
Week1/20210527_195245_CollectQualityYieldMetrics/: command  error.json  inputs.json  rerun  stderr.txt  stderr.txt.offset
Week1/20210527_195245_CollectQualityYieldMetrics/wdl/: Qc.wdl
Week1/20210528_191200_CollectQualityYieldMetrics/: command  rerun
Week1/20210528_191200_CollectQualityYieldMetrics/wdl/: Qc.wdl
Week1/20210528_191200_CollectQualityYieldMetrics/work/: metrics_filename
Week1/miniwdl_output/: inputs.json  outputs.json  stderr.txt  stderr.txt.offset
Week1/wdl_parsing/: EvaluateTaskVisitor.py  Qc.wdl  WdlV1_1Ast.py  WdlV1_1ParserListener.py  WdlV1_1ParserVisitor.py  create_cwl.py  result.cwl  test_WdlV1_1.py
Week1/wdl_parsing/.antlr/: WdlV1_1Lexer.java
cwl-wdl/: WdlV1_1Lexer.interp  WdlV1_1Lexer.java  WdlV1_1Lexer.py  WdlV1_1Parser.interp  WdlV1_1Parser.py  WdlV1_1Parser.tokens  WdlV1_1ParserListener.py  WdlV1_1ParserVisitor.py  p.py
env/locale/en/LC_MESSAGES/: bagit-python.mo
md5/: _LAST  md5.cwl  md5.yml
md5/20210527_000200_ga4ghMd5/: inputs.json  outputs.json  rerun
md5/20210527_000200_ga4ghMd5/call-md5/: command  inputs.json  outputs.json
md5/20210527_000200_ga4ghMd5/call-md5/work/: md5sum.txt
md5/20210527_000200_ga4ghMd5/wdl/: md5.wdl
paper/: paper.bib  paper.md
tests/: WdlV1_1.py  WdlV1_1Parser.py  WdlV1_1ParserVisitor.py  test_cwl.py
wdl2cwl/: WdlV1_1.py  WdlV1_1Lexer.py  WdlV1_1ParserVisitor.py  __init__.py  errors.py  expr.py  functions.py  main.py  main_oop.py  main_oop_2.py  old_main_oop.py  util.py
wdl2cwl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wdl2cwl/tests/: cwl_tests.yaml  cwl_tests_big.yaml  cwl_tests_bigdata.yaml  cwl_tests_bigdata_bigmem.yaml  male.vcf.stats  parse_error.wdl  test_cli.py  test_cwl.py  test_miniwdl.py  test_wdl_stdlib.py  test_wdlsourceline.py  util.py
wdl2cwl/tests/cwl_files/: ATAC.cwl  BuildCembaReferences.cwl  BuildIndices.cwl  CollectQualityYieldMetrics.cwl  CollectReadgroupBamQualityMetrics.cwl  FunctionalEquivalence.cwl  InternalTasks.cwl  NewResult.cwl  NoResult.cwl  Qc.cwl  Qc_with_disks.cwl  Result.cwl  TrimAdapters.cwl  TrimAdapters_without_comment.cwl  UmiCorrection.cwl  Utilities.cwl  align_and_count.cwl  align_and_count_multiple_report.cwl  array_nonempty.cwl  basic_quote.cwl  basic_sep.cwl  bcftools.cwl  bcftools_1.cwl  bcftools_3.cwl  bcftools_annotate.cwl  bcftools_stats.cwl  blast.cwl  bowtie.cwl  bowtie_1.cwl  bowtie_2.cwl  bowtie_3.cwl  bwa.cwl  bwa_test_size_function.cwl  bwa_with_select_first.cwl  centrifuge.cwl  deepvariant.cwl  dynamic_memory_units.cwl  flatten.cwl  format.cwl  gatk.cwl  (+44 more)
wdl2cwl/tests/inputs/: ATAC.yaml  BuildCembaReferences.yaml  BuildIndices_mouse.yaml  CollectQualityYieldMatrics.yaml  CollectReadgroupBamQualityMetrics.yaml  RP-929.NA12878.bai  RP-929.NA12878.bam  Utilities_CreateSequenceGroupingTSV.yaml  align_and_count.yaml  align_and_count_multiple_report.yaml  array_nonempty.yaml  basic_sep.inputs.yaml  bcftools_annotate.yaml  bcftools_stats.yaml  deepvariant.yaml  flatten.yaml  gwas.yaml  pacbio_ccsChunks.yaml  struct_output.yaml  thousand_genomes_meta.csv  validateOptimus_2.yaml
wdl2cwl/tests/oop_cwl_files/: CollectQualityYieldMetrics.cwl  CollectReadgroupBamQualityMetrics.cwl  TrimAdapters.cwl  UmiCorrection.cwl  bcftools_annotate.cwl  bcftools_stats.cwl  bowtie_1.cwl  bowtie_2.cwl  bowtie_3.cwl  deepvariant.cwl  hisat2_1.cwl  hisat2_3.cwl  isoseq3.cwl  minCores.cwl  read_string_cornercase.cwl  rtg.cwl  rtg_VcfEval.cwl  seqtk_1.cwl  seqtk_2.cwl  smoove.cwl  transcriptclean_1.cwl  validateOptimus_1.cwl  validateOptimus_2.cwl  validateOptimus_3.cwl  validateOptimus_5.cwl  vardict.cwl
wdl2cwl/tests/wdl_files/: ATAC.wdl  BuildCembaReferences.wdl  BuildIndices.wdl  CollectQualityYieldMetrics.cwl  CollectQualityYieldMetrics.wdl  CollectReadgroupBamQualityMetrics.wdl  FunctionalEquivalence.wdl  InternalTasks.wdl  Qc.wdl  Qc_with_disks.wdl  TrimAdapters.wdl  TrimAdapters_without_comment.wdl  UmiCorrection.wdl  Utilities.wdl  align_and_count.wdl  align_and_count_multiple_report.wdl  array_nonempty.wdl  basic_quote.wdl  basic_sep.wdl  bcftools.wdl  bcftools_1.wdl  bcftools_3.wdl  bcftools_annotate.wdl  bcftools_stats.wdl  blast.wdl  bowtie.wdl  bowtie_1.wdl  bowtie_2.wdl  bowtie_3.wdl  bwa.wdl  bwa_test_size_function.wdl  bwa_with_select_first.wdl  centrifuge.wdl  combined.wdl  deepvariant.wdl  dynamic_memory_units.wdl  flatten.wdl  format.wdl  gatk.wdl  gatk_1.wdl  (+41 more)
(+20 files in other folders)
