[metadata]
name = wdl2cwl
version = attr: wdl2cwl.__version__
author = Dinithi Wickramaratne
author_email = diniwick124@gmail.com
url = https://github.com/common-workflow-lab/wdl-cwl-translator
description = A translator from WDL to CWL v1.2
long_description=file: README.md
long_description_content_type=text/markdown
project_urls =
    Documentation = https://github.com/common-workflow-lab/wdl-cwl-translator/
    Source = https://github.com/common-workflow-lab/wdl-cwl-translator/
    Tracker = https://github.com/common-workflow-lab/wdl-cwl-translator/issues
keywords =
    scientific-workflows
    workflow-engine
    workflow-management
    common-workflow-language
    cwl
    wdl
    workflow-description-language
    transpiler
license = Apache License
license_file = LICENSE
platforms = any
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find_namespace:
python_requires = >=3.7
install_requires =
    cwl-utils >= 0.12
    miniwdl
    regex

[options.packages.find]
include = wdl2cwl.*

[options.extras_require]
mypy =
    mypy==0.941
    types-requests
    types-setuptools
test =
    cwltest
    cwltool >= 3.1.20220202110738
    pytest >= 6.0.2, < 7.2
    pytest-cov
    pytest-xdist
all =
    %(mypy)s
    %(test)s

[options.entry_points]
console_scripts=
    wdl2cwl = wdl2cwl.main:main

[aliases]
test=pytest

[flake8]
ignore = E124,E128,E129,E201,E202,E225,E226,E231,E265,E271,E302,E303,F401,E402,E501,W503,E731,F811,F821,F841
max-line-length = 88
extend-ignore = E203, W503

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
strict = True

[mypy-ruamel.*]
ignore_errors = True

[mypy-lark.*]
ignore_missing_imports = True
